# colcon-rebar3

./: README.md  setup.cfg
colcon_rebar3/argcomplete_completer/: rebar3_args.py
colcon_rebar3/package_identification/: rebar3.py
colcon_rebar3/task/rebar3/: __init__.py  build.py  test.py
