[metadata]
name = colcon-rebar3
version = attr: colcon_rebar3.__version__
author = "Gaetano D'Agostino"
author_email = dagyu95dev@gmail.com
maintainer = "Gaetano D'Agostino"
maintainer_email = dagyu95dev@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to support Ament Rebar3 packages.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  catkin_pkg>=0.4.14
  colcon-cmake>=0.2.6
  colcon-core>=0.7.0
  # technically not a required dependency but "very common" for ROS 1 users
  colcon-pkg-config
  colcon-python-setup-py>=0.2.4
  # technically not a required dependency but "very common" for ROS users
  colcon-recursive-crawl
  # to set an environment variable when a package installs a library
  colcon-library-path
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
    ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning
    ignore:the imp module is deprecated in favour of importlib.*:PendingDeprecationWarning
junit_suite_name = colcon-rebar3

[options.entry_points]
colcon_argcomplete.argcomplete_completer =
    rebar3_args = colcon_rebar3.argcomplete_completer.rebar3_args:Rebar3ArgcompleteCompleter
colcon_core.package_identification =
    rebar3 = colcon_rebar3.package_identification.rebar3:Rebar3PackageIdentification
colcon_core.task.build =
    rebar3 = colcon_rebar3.task.rebar3.build:Rebar3BuildTask
colcon_core.task.test =
    rebar3 = colcon_rebar3.task.rebar3.test:Rebar3TestTask

[flake8]
import-order-style = google

[coverage:run]
source = colcon_rebar3
